--- a/versions.cfg
+++ b/versions.cfg
@@ -2,9 +2,41 @@
 extends =
     http://dist.plone.org/release/4.3.7/versions.cfg
     https://raw.github.com/4teamwork/ftw-buildouts/master/hotfixes/4.3.7.cfg
+
 versions = versions
 
 [versions]
+Products.DateRecurringIndex = 2.1
+argcomplete = 1.0.0
+collective.blueprint.jsonmigrator = 0.1.1
+collective.elephantvocabulary = 0.2.5
+collective.recipe.filestorage = 0.6
+collective.recipe.shelloutput = 0.1
+collective.recipe.supervisor = 0.19
+collective.transmogrifier = 1.5.1
+collective.warmup = 1.1
+ftw.inflator = 1.5
+ftw.profilehook = 1.0.0
+ftw.recipe.checkversions = 1.2.1
+ftw.recipe.deployment = 1.1.1
+ftw.recipe.translations = 1.2.5
+ftw.upgrade = 1.15.1
+i18ndude = 4.0.1
+icalendar = 3.9.1
+inflection = 0.3.1
+meld3 = 1.0.0
+path.py = 8.1.2
 plone.app.contenttypes = 1.1b5
 plone.app.event = 1.1.5
+plone.app.transmogrifier = 1.4
+plone.event = 1.3
+plone.formwidget.datetime = 1.2
+plone.formwidget.querystring = 1.1.5
 plone.formwidget.recurrence = 1.2.6
+plone.recipe.precompiler = 0.6
+plone.validatehook = 1.0
+requests = 2.8.1
+superlance = 0.11
+supervisor = 3.1.3
+tarjan = 0.2.3.1
+z3c.jbot = 0.7.2
